03-deployments.yaml
# ---------- MongoDB ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: ornob
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: storage
          mountPath: /data/db
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
# ---------- Mongo-Express ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: ornob
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

---
# ---------- Backend (ostad-server) ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-server
  namespace: ornob
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostad-server
  template:
    metadata:
      labels:
        app: ostad-server
    spec:
      containers:
      - name: server
        image: ornob29/ostad-repo:server-latest

        ports:
        - containerPort: 5050
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "256Mi"
            cpu: "300m"

---
# ---------- Frontend (ostad-ui) ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui
  namespace: ornob
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
      - name: ui
        image: ornob29/ostad-repo:ui-latest
        ports:
        - containerPort: 5173
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi" 
            cpu: "200m"
