04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ornob
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None 

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: ornob
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: ostad-server
  namespace: ornob
spec:
  selector:
    app: ostad-server
  type: ClusterIP
  ports:
  - port: 5050
    targetPort: 5050

---
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: ornob
spec:
  selector:
    app: ostad-ui
  type: NodePort
  ports:
  - port: 80
    targetPort: 80   # ← NGINX
    nodePort: 30001
